--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <a id='skip-nav' class='screenreader-text' href='#main-content'></a>
   <div class="container">
     <div class="site-header">
       <h1>Jam Box Studios</h1>
