--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       </div>
       <img src="https://placekitten.com/1200/900" alt="kitten" class="banner">
     </div>
+    <div id="percent-loaded" role="progressbar" aria-valuenow="75"
+    aria-valuemin="0" aria-valuemax="100">
+</div> 
     <div class="main-content">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
